making it to be okay to not upload image